--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "dependencies": {
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "date-fns": "^3.3.1",
+    "flatpickr": "^4.6.13",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
+    "vue-flatpickr-component": "^11.0.3",
+    "vue-multiselect": "^2.1.8",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
@@ -23,7 +27,7 @@
     "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-service": "^5.0.8",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
   }
