--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "flatpickr": "^4.6.13",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
+    "vue-datepicker-local": "^1.0.19",
     "vue-flatpickr-component": "^11.0.3",
     "vue-multiselect": "^2.1.8",
     "vue-router": "^4.0.3",
